Fix spacing and add color

--- a/src/renderer/components/content-types/contact/ContactEditor.css
+++ b/src/renderer/components/content-types/contact/ContactEditor.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 8px;
   line-height: 36px;
   height: 40px;
   border-bottom: 1px solid var(--colorPaleGrey);
